<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="edu.mirea.onebeattrue.numbercomposition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/game_over"
            app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resultEmoji="@{gameResult.winner}"
            tools:srcCompat="@drawable/ic_smile"/>

        <TextView
            tools:text="@string/required_score"
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}" />

        <TextView
            tools:text="@string/score_answers"
            android:id="@+id/tv_score_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:score="@{gameResult.countOfRightAnswers}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_answers" />

        <TextView
            tools:text="@string/required_percentage"
            android:id="@+id/tv_required_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}" />

        <TextView
            tools:text="@string/score_percentage"
            android:id="@+id/tv_score_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:scorePercentage="@{gameResult}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>